# poettest

./: README.md
test_poetry/: pyproject.toml
test_poetry/test_poetry/scripts/: say_hello.py
