[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = ["rollingmid <sopnevdima@mail.ru>"]
readme = "README.md"
packages = [{include = "test_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
flake8 = "^6.0.0"

[tool.poetry.scripts]
say-hello = "test_poetry.scripts.say_hello:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
